error.log
Error starting sensus app: closing parenthesis '}' does not match opening parenthesis '(' (routes.py, line 811)
Sensus directory: /home/pahlawa5/public_html/sensus
Traceback: Traceback (most recent call last):
  File "/home/pahlawa5/public_html/sensus/passenger_wsgi.py", line 17, in <module>
    application = create_app('production')
  File "/home/pahlawa5/public_html/sensus/app/__init__.py", line 46, in create_app
    from app.main import bp as main_bp
  File "/home/pahlawa5/public_html/sensus/app/main/__init__.py", line 5, in <module>
    from app.main import routes
  File "/home/pahlawa5/public_html/sensus/app/main/routes.py", line 811
    return redirect(url_for('main.dashboard', error=str(e)})
                                                          ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('

